VSE: appended modifier stack incorrectly deletes additional modifier #111601

Closed
opened 2023-08-28 08:18:24 +02:00 by Serge Lyatin · 2 comments
First-time contributor

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 3.6.2

Short description of error

Exact steps for others to reproduce the error

  • In attached file click Copy to Selected Strips > Append
  • Click White strip to make it active and remove recently added (second) modifier from the stack -> original modifier is removed instead of appended
**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 3.6.2 **Short description of error** **Exact steps for others to reproduce the error** - In attached file click `Copy to Selected Strips > Append` - Click White strip to make it active and remove recently added (second) modifier from the stack -> original modifier is removed instead of appended
Serge Lyatin added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-08-28 08:18:25 +02:00
Member

Huh, very interesting. Can confirm.

Huh, very interesting. Can confirm.
YimingWu added
Module
User Interface
Status
Confirmed
Interest
Video Sequencer
and removed
Status
Needs Triage
labels 2023-08-28 09:55:31 +02:00
Member

Looks like a simple fix. SEQ_modifier_list_copy doesn't ensure modifier's unique name so by calling strip remove with name as argument it will delete the wrong one.

Will make a PR.

Looks like a simple fix. `SEQ_modifier_list_copy` doesn't ensure modifier's unique name so by calling strip remove with name as argument it will delete the wrong one. Will make a PR.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-28 10:05:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111601
No description provided.