source/blender/sequencer/intern/modifier.c
@@ -1554,6 +1554,8 @@ void SEQ_modifier_list_copy(Sequence *seqn, Sequence *seq)
 
     smdn->next = smdn->prev = NULL;
     BLI_addtail(&seqn->modifiers, smdn);
+    BLI_uniquename(
+        &seqn->modifiers, smdn, "Strip Modifier", '.', offsetof(SequenceModifierData, name), 64);
   }
 }
 
